[gd_scene load_steps=36 format=2]

[ext_resource path="res://Character/Wizard.gd" type="Script" id=1]
[ext_resource path="res://assets/Character spriites/Wizard/0_Sage_Idle Blinking_000.png" type="Texture" id=2]
[ext_resource path="res://assets/Character spriites/Wizard/0_Sage_Idle Blinking_001.png" type="Texture" id=3]
[ext_resource path="res://assets/Character spriites/Wizard/0_Sage_Idle Blinking_002.png" type="Texture" id=4]
[ext_resource path="res://assets/Character spriites/Wizard/0_Sage_Idle Blinking_003.png" type="Texture" id=5]
[ext_resource path="res://assets/Character spriites/Wizard/0_Sage_Idle Blinking_004.png" type="Texture" id=6]
[ext_resource path="res://assets/Character spriites/Wizard/0_Sage_Idle Blinking_005.png" type="Texture" id=7]
[ext_resource path="res://assets/Character spriites/Wizard/0_Sage_Idle Blinking_006.png" type="Texture" id=8]
[ext_resource path="res://assets/Character spriites/Wizard/0_Sage_Idle Blinking_007.png" type="Texture" id=9]
[ext_resource path="res://assets/Character spriites/Wizard/0_Sage_Idle Blinking_008.png" type="Texture" id=10]
[ext_resource path="res://assets/Character spriites/Wizard/0_Sage_Idle Blinking_009.png" type="Texture" id=11]
[ext_resource path="res://assets/Character spriites/Wizard/0_Sage_Idle Blinking_010.png" type="Texture" id=12]
[ext_resource path="res://assets/Character spriites/Wizard/0_Sage_Idle Blinking_011.png" type="Texture" id=13]
[ext_resource path="res://assets/Character spriites/Wizard/0_Sage_Idle Blinking_012.png" type="Texture" id=14]
[ext_resource path="res://assets/Character spriites/Wizard/0_Sage_Idle Blinking_013.png" type="Texture" id=15]
[ext_resource path="res://assets/Character spriites/Wizard/0_Sage_Idle Blinking_014.png" type="Texture" id=16]
[ext_resource path="res://assets/Character spriites/Wizard/0_Sage_Idle Blinking_015.png" type="Texture" id=17]
[ext_resource path="res://assets/Character spriites/Wizard/0_Sage_Idle Blinking_016.png" type="Texture" id=18]
[ext_resource path="res://assets/Character spriites/Wizard/0_Sage_Idle Blinking_017.png" type="Texture" id=19]
[ext_resource path="res://assets/Character spriites/Wizard/0_Sage_Idle Blinking_018.png" type="Texture" id=20]
[ext_resource path="res://assets/Character spriites/Wizard/0_Sage_Idle Blinking_019.png" type="Texture" id=21]
[ext_resource path="res://assets/Character spriites/Wizard/0_Sage_Idle Blinking_020.png" type="Texture" id=22]
[ext_resource path="res://assets/Character spriites/Wizard/0_Sage_Idle Blinking_021.png" type="Texture" id=23]
[ext_resource path="res://assets/Character spriites/Wizard/0_Sage_Idle Blinking_022.png" type="Texture" id=24]
[ext_resource path="res://assets/Character spriites/Wizard/0_Sage_Idle Blinking_023.png" type="Texture" id=25]
[ext_resource path="res://assets/Character spriites/Wizard/0_Sage_Idle Blinking_024.png" type="Texture" id=26]
[ext_resource path="res://assets/Character spriites/Wizard/0_Sage_Idle Blinking_025.png" type="Texture" id=27]
[ext_resource path="res://assets/Character spriites/Wizard/0_Sage_Idle Blinking_026.png" type="Texture" id=28]
[ext_resource path="res://assets/Character spriites/Wizard/0_Sage_Idle Blinking_027.png" type="Texture" id=29]
[ext_resource path="res://assets/Character spriites/Wizard/0_Sage_Idle Blinking_028.png" type="Texture" id=30]
[ext_resource path="res://assets/Character spriites/Wizard/0_Sage_Idle Blinking_029.png" type="Texture" id=31]
[ext_resource path="res://Dialogues/Dialog.tscn" type="PackedScene" id=32]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ) ],
"loop": true,
"name": "ideal",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 73.5838
height = 69.3939

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 128.272, 134.921 )

[node name="Wizard" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.352207, 0.352207 )
frames = SubResource( 1 )
animation = "ideal"
frame = 19
playing = true

[node name="DialogBox" parent="." instance=ExtResource( 32 )]
visible = false
margin_left = 74.0307
margin_top = -51.0811
margin_right = 734.031
margin_bottom = 38.9189

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
